# NetMake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  builder.yml
cmake/: docs.cmake
external_libs/: CMakeLists.txt
src/: CMakeLists.txt
src/netmake/: CMakeLists.txt  generate.cpp  generate.hpp  json.hpp  main.cpp  settings.cpp  settings.hpp
src/netmake/generation/: CMakeLists.txt  derived_page_generator.cpp  derived_page_generator.hpp  generate.cpp  generate.hpp  generative_element.cpp  generative_element.hpp  path.cpp  path.hpp  simple_page_generator.cpp  simple_page_generator.hpp  template_generator.cpp  template_generator.hpp
src/netmake/settings/: CMakeLists.txt  settings.cpp  settings.hpp
src/netmake/tasks/: CMakeLists.txt  tasks.hpp
